# excel_manipulation_couleur_beeware

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOIEMENT_ENTREPRISE.md  INSTALL.md  README.md  README_DEPLOIEMENT.md  build_msi.ps1  build_msi.sh  deploy_colorexcel.ps1  pyproject.toml  run.ps1  uninstall_colorexcel.ps1
.briefcase/excel_color_manager/dev/: venv_path
.claude/: settings.local.json
docs/: DEPLOYMENT.md  INSTALL.md  USER_GUIDE.md
src/colorexcel/: __init__.py  __main__.py  logic.py
src/excel_color_manager/: __init__.py  __main__.py
src/excel_color_manager.dist-info/: METADATA  top_level.txt
